[package]
name = "fgo-boost"
version = "0.1.0"
authors = ["RyougiTale"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = "0.1"
log = "0.4"
pretty_env_logger = "0.4"
serialport = "3.3.0"
libc = "0.2.9"
opencv = "0.45"